tests/semantic_errors/andrei20_6.tl
require"ifj21"

-- wrong arithm types
function main()
    local id : integer = 34 - 12 + 12 + 21 + 21  + ("ste".."str")
end

main()
